--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
 			"ESNext",
 			"DOM"
 		],
-		"esModuleInterop": true,
+		"esModuleInterop": false,
 		"skipLibCheck": true,
 		"forceConsistentCasingInFileNames": true,
 		"outDir": "./dist",
